--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "acacha/admin-lte-template-laravel": "4.*",
         "cocur/slugify": "^2.3",
         "laravel/framework": "5.4.*",
+        "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.3",
         "lavary/laravel-menu": "^1.6",
-        "spatie/laravel-menu": "^2.0"
+        "spatie/laravel-menu": "^2.0",
+        "spatie/laravel-permission": "^1.12"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -52,5 +54,11 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
+    },
+    "repositories": {
+    "packagist": {
+      "type": "composer",
+      "url": "https://packagist.org"
     }
+  }
 }
