--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": ">=5.6.4",
         "acacha/admin-lte-template-laravel": "4.*",
         "cocur/slugify": "^2.3",
+        "jenssegers/date": "^3.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.3",
         "lavary/laravel-menu": "^1.6",
+        "nwidart/laravel-modules": "^1.19",
         "spatie/laravel-menu": "^2.0",
         "spatie/laravel-permission": "^1.12"
     },
@@ -27,7 +29,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         }
     },
     "autoload-dev": {
